--- a/ConsoleAppWithLogging/ConsoleAppWithLogging.UI/ConsoleAppWithLogging.UI.csproj
+++ b/ConsoleAppWithLogging/ConsoleAppWithLogging.UI/ConsoleAppWithLogging.UI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -28,6 +28,11 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Entities\" />
   </ItemGroup>
 
 </Project>
