Added Entry point service

--- a/ConsoleAppWithLogging/ConsoleAppWithLogging.UI/appsettings.json
+++ b/ConsoleAppWithLogging/ConsoleAppWithLogging.UI/appsettings.json
@@ -12,7 +12,9 @@
       {
         "Name": "File",
         "Args": {
-          "Path": "/logs/consoleappwithlogging.log"
+          "Path": "/logs/consoleappwithlogging.log",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 365
         }
       }
     ]
